[gd_scene load_steps=3 format=3 uid="uid://bhoiqqokfqnm7"]

[ext_resource type="FontFile" uid="uid://q0ai3wfelumn" path="res://graphics/fonts/FutureMillennium.ttf" id="1_5kwcg"]
[ext_resource type="Script" path="res://scripts/pause_screen.gd" id="1_mrcnt"]

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 2
layer = 10
visible = false
script = ExtResource("1_mrcnt")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.054902, 0.054902, 0.054902, 0.545098)

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "



"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_5kwcg")
theme_override_font_sizes/font_size = 64
text = "Paused
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5kwcg")
theme_override_font_sizes/font_size = 50
text = "Restart"

[node name="SkipButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5kwcg")
theme_override_font_sizes/font_size = 50
text = "Skip Level"

[node name="Main Screen" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5kwcg")
theme_override_font_sizes/font_size = 50
text = "Main Screen"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main Screen" to="." method="_on_main_screen_pressed"]
